<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@drawable/ic_action_overflow">
    <item
        android:id="@+id/action_list_course_sort"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_list_sort_by">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_list_course_sort_alphabet_ascending"
                    android:title="@string/action_list_sort_alphabet_ascending" />
                <item
                    android:id="@+id/action_list_course_sort_alphabet_descending"
                    android:title="@string/action_list_sort_alphabet_descending" />
            </group>
        </menu>
    </item>

</menu>
