<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/dialogPrompt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.janclarin.gradepath.dialog.ReminderDialogFragment">

    <!-- Task name -->
    <EditText
        android:id="@+id/et_reminder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_dialog_reminder_name"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:singleLine="true" />

    <CheckBox
        android:id="@+id/cb_graded"
        style="@style/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_reminder_name"
        android:layout_marginTop="8dp"
        android:text="@string/cb_exam" />

    <!-- Course spinner -->
    <TextView
        android:id="@+id/tv_dialog_reminder_course_header"
        style="@style/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_graded"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_course" />

    <Spinner
        android:id="@+id/spn_dialog_reminder_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_graded"
        android:layout_marginTop="20dp"
        android:minHeight="40dp" />

    <!-- Due date "spinner" -->
    <TextView
        android:id="@+id/tv_dialog_date_header"
        style="@style/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spn_dialog_reminder_courses"
        android:layout_marginTop="8dp"
        android:text="@string/tv_dialog_reminder_date" />

    <Button
        android:id="@+id/btn_dialog_date"
        style="@style/spinnerButton"
        android:layout_width="match_parent"
        android:layout_below="@id/spn_dialog_reminder_courses"
        android:layout_marginTop="20dp" />
</RelativeLayout>
