<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/dialogPrompt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.janclarin.gradepath.dialog.GradeComponentDialogFragment">

    <EditText
        android:id="@+id/et_grade_component_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_grade_component"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showDividers="middle">

        <EditText
            android:id="@+id/et_grade_component_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="0.5"
            android:digits="1, 2, 3, 4, 5, 6, 7, 8, 9, 0, ."
            android:hint="@string/et_grade_component_weight"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_grade_component_number_of_items"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="0.5"
            android:hint="@string/et_grade_component_number_of_items"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true" />

    </LinearLayout>
</LinearLayout>